--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Urbanist&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Urbanist', sans-serif;
 }
 
 body {
   margin: 0;
-  background: #4d4d4d;
+  background: #fff;
 }
 
 .slide-in-left-enter {
