--- a/src/shared/Components/Button.module.css
+++ b/src/shared/Components/Button.module.css
@@ -1,15 +1,16 @@
 .button {
-    margin: auto;
+    margin: 0;
     position: relaive;
 
-    width: 30%;
-    font: inherit;
-    padding: 0.5rem 1.5rem;
+    width: 30px;
+    height: 20px;
+    
+    padding: 5px;
     border: 1px solid #008b68;
-    border-radius: 10px;
+    border-radius: 100%;
     color: white;
     background: #008b68;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.26);
+    
     cursor: pointer;
   }
   
