--- a/src/budgets/NewBudget/BudgetForm.module.css
+++ b/src/budgets/NewBudget/BudgetForm.module.css
@@ -74,3 +74,7 @@ textarea{
     border: 2px solid rgba(191, 253, 189, 0.459);
     background: #0aaa12ee;
 }
+
+.button__Inactive{
+    background: #2a2b2a;
+}
