created Card component

--- a/src/shared/Components/Button.module.css
+++ b/src/shared/Components/Button.module.css
@@ -15,7 +15,7 @@
 
 .button:hover{
   border: 2px solid rgba(191, 253, 189, 0.459);
-  background: #0aaa12ee;
+  background: #2fbf71;
 }
 
 .button__Inactive{
