--- a/src/shared/Components/Button.module.css
+++ b/src/shared/Components/Button.module.css
@@ -3,7 +3,7 @@
   font-size: 22px;
   color: #fff;
   padding: 10px;
-  margin-bottom: 20px;
+  margin-bottom: none;
   height: 3rem;
   border-radius: 10px;
   border:2px solid rgb(0, 131, 70);
