--- a/src/shared/Components/Input.module.css
+++ b/src/shared/Components/Input.module.css
@@ -3,6 +3,7 @@ textarea {
     text-align: center;
     font: inherit;
     margin-left: 5px;
+    margin-top: 10px;
     margin-bottom: 20px;
     padding: 1px 15px;
     font-size: 18px;
