--- a/src/budgets/NewBudget/CreateBudget.module.css
+++ b/src/budgets/NewBudget/CreateBudget.module.css
@@ -3,10 +3,10 @@
     border: none;
     padding: 1rem 0.5rem;
     border-radius: 10px;
-    width: 60%;
+    width: 100%;
     margin: auto;
-    margin-top: 2rem;
-    background-color:  rgba(255, 255, 255, 0.055) ;
+    margin-top: 1rem;
+    background-color:  none
 
 
 }
