--- a/src/shared/Components/Modal.Module.css
+++ b/src/shared/Components/Modal.Module.css
@@ -5,17 +5,17 @@
   width: 100%;
   height: 100vh;
   z-index: 20;
-  background-color: rgba(0, 0, 0, 0.75);
-  border: 1px solid red;
+  background-color: rgba(0, 0, 0, 0.548);
+ 
 }
 
 .modal {
-  border: 1px solid blue;
+  
   position: fixed;
   top: 20vh;
   left: 5%;
   width: 90%;
-  background-color: white;
+  background-color: #242424;
   padding: 1rem;
   border-radius: 14px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
@@ -35,6 +35,7 @@
     opacity: 0;
     transform: translateY(-3rem);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
