--- a/src/budgets/pages/MyBudget.module.css
+++ b/src/budgets/pages/MyBudget.module.css
@@ -2,18 +2,28 @@
 
 
   .budget-container {
-    padding: 100px 0 150px 0;
-    background-color: #2fbf702c;
+    padding: 20px 0 20px 0;
+    background-color: #01262b;
     min-height: 100%;
     height: 100%;
 
   }
 
-  .budget-title h1 {
-    padding-top: 20px;
+  .budget-title {
+    margin-bottom: 10px;
+  }
+
+  .app-name h1{
+    font-size: 2rem;
+    color: #2FBF71;
+  }
+
+  .budget-title {
+
+
     background-color: none;
     margin: 0;
-    color: white;
+    color: #2fbf7062;
     text-align: center;
   }
 
@@ -30,6 +40,15 @@
     width: 90%
   }
 
+  .budget-actions{
+    color: white;
+  }
+
+  .budget-actions span{
+    color:#ed7d3a;
+    text-decoration: underline;
+    
+  }
   .budget-details {
     margin: auto;
 
@@ -43,7 +62,7 @@
     color: white;
     text-align: center;
     padding: 3px;
-    background-color: #2FBF71;
+    background-color: #2fbf7075;
     border-radius: 10px;
     margin: 5px;
     font-size: 14px;
@@ -78,8 +97,18 @@
 
   }
 
-  .error-text {
-    color: rgb(253, 19, 70);
+  .error-text{
+    color: #ef2d56;
     margin-top: -15px;
   }
+}
+
+.fixed-actions{
+  position: absolute;
+ 
+  width: 100%;
+  height: fit-content;
+  background-color: #363537;
+  margin-top: -30px;
+  
 }
