--- a/src/expenses/components/ExpenseItem.module.css
+++ b/src/expenses/components/ExpenseItem.module.css
@@ -1,18 +1,22 @@
 @media (min-width: 200px) {
     .expense-item {
-        display: inline-block;
-        background-color: rgb(22, 155, 44);
+        position: relative;
+        display: inline;
+        background-color: #2fbf7033;
         border-radius: 5px;
         /* border: 1px solid rgb(22, 155, 44); */
         margin-bottom: 20px;
-
+        
         width: 30%;
-        height: 110px;
+        height: fit-content;
         cursor: pointer;
 
 
     }
 
+    .expense-item__expanded {
+        width: 55%;
+    }
 
 
 
@@ -33,8 +37,9 @@
 
     .expense-item-row {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
         margin-top: -25px;
+       
     }
 
     .expense-item-row p {
@@ -48,28 +53,28 @@
     }
 
     .D {
-        background-color: greenyellow;
+        background-color: #70e000;
         border-radius: 100%;
         padding: 5px 10px;
         margin-right: 10px;
     }
 
     .C {
-        background-color: rgb(255, 217, 47);
+        background-color: #ed7d3a;
         border-radius: 100%;
         padding: 5px 10px;
 
     }
 
     .P {
-        background-color: rgb(47, 161, 255);
+        background-color: #363537;
         border-radius: 100%;
         padding: 5px 10px;
 
     }
 
     .R {
-        background-color: rgb(85, 47, 255);
+        background-color: #ef2d56;
         border-radius: 100%;
         padding: 5px 10px;
 
@@ -85,10 +90,10 @@
 
 
     .expense-item-details {
-
+        position: relative;
         margin: auto;
-        /* display: none; */
-        background-color: rgb(22, 155, 44);
+
+        background-color:none;
         border-radius: 5px;
         z-index: 1;
 
@@ -96,19 +101,23 @@
     }
 
     .expanded {
-        position: relative;
-        display: block;
+        position:relative;
+        
         z-index: 1;
     }
 
     .expense-item-detail-row {
+       
+        width:80%;
+        margin: auto;
         display: flex;
-        justify-content: space-around;
-        margin-top: 0;
+        justify-content: flex-start;
+        
     }
 
     .expense-item-detail-row p {
         padding-top: 5px;
+        margin-left: 5px;
         font-size: 14px;
         color: white;
     }
