--- a/src/components/Expense/ExpenseItem.module.css
+++ b/src/components/Expense/ExpenseItem.module.css
@@ -2,29 +2,30 @@
     .expense-item {
         position: relative;
         display: inline;
-        background-color: #2fbf7033;
+        background-color: #2FBF71;
         border-radius: 5px;
         /* border: 1px solid rgb(22, 155, 44); */
-        margin-bottom: 20px;
-        
-        width: 30%;
+        margin: 5px;
+        width: 40%;
+        min-width: 40%;
         height: fit-content;
         cursor: pointer;
+        
 
 
     }
 
     .expense-item__expanded {
         width: 55%;
+        min-width: 55%;
     }
 
 
 
     .expense-item-title {
 
-        display: flex;
-        justify-content: space-evenly;
-
+        display: inline;
+        margin: auto
     }
 
     .title {
@@ -39,7 +40,7 @@
         display: flex;
         justify-content: space-evenly;
         margin-top: -25px;
-       
+
     }
 
     .expense-item-row p {
@@ -56,20 +57,21 @@
         background-color: #70e000;
         border-radius: 100%;
         padding: 5px 10px;
-        margin-right: 10px;
+        border: 1px solid white;
     }
 
     .C {
         background-color: #ed7d3a;
         border-radius: 100%;
         padding: 5px 10px;
-
+        border: 1px solid white;
     }
 
     .P {
         background-color: #363537;
         border-radius: 100%;
         padding: 5px 10px;
+        border: 1px solid white;
 
     }
 
@@ -77,6 +79,7 @@
         background-color: #ef2d56;
         border-radius: 100%;
         padding: 5px 10px;
+        border: 1px solid white;
 
     }
 
@@ -92,27 +95,25 @@
     .expense-item-details {
         position: relative;
         margin: auto;
-
-        background-color:none;
+        background-color: none;
         border-radius: 5px;
         z-index: 1;
 
 
     }
 
-    .expanded {
-        position:relative;
-        
+    /* .expanded {
+        position: relative;
         z-index: 1;
-    }
+    } */
 
     .expense-item-detail-row {
-       
-        width:80%;
+
+        width: 80%;
         margin: auto;
         display: flex;
-        justify-content: flex-start;
-        
+        justify-content: flex-end;
+
     }
 
     .expense-item-detail-row p {
@@ -135,5 +136,14 @@
         justify-content: space-around;
         margin-top: 10px;
     }
+
+    .setpaid {
+        display: block;
+        position: relative;
+        right: -50px;
+        bottom: -30px;
+        cursor: pointer;
+    }
+
 
 }
