--- a/src/components/Budget/BudgetDetail.module.css
+++ b/src/components/Budget/BudgetDetail.module.css
@@ -28,14 +28,18 @@
   }
 
   .budget-title h1 {
-    margin: 10px 0 0 0;
-    color: #FFF;
-    font-size: 22px;
+    margin:0 0 0 5px;
+    color: #2fbf70;
+    font-size: 20px;
+    text-align: left;
+   
   }
 
   .budget-title p {
     margin: 0;
     color: #FFF;
+    text-align: left;
+    margin-left: 5px;
    
   }
 
@@ -166,7 +170,7 @@
   height: fit-content;
   background-color: #3635372a;
   margin: auto;
-  margin-top: 20px;
+  
   padding: 10px 0 10px 0;
  
 }
